[feature]在项目中同时使用ContentProvider、ContentResolver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ContentResolverActivity"></activity>
+
         <provider
             android:name=".StudentContentProvider"
             android:authorities="com.lyf.studentProvider"
             android:enabled="true"
-            android:exported="true"></provider>
+            android:exported="true" />
 
         <activity android:name=".UriActivity" />
         <activity android:name=".MainActivity">
